# toy-vllm

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build.sh  full_test.sh  nsys.sh  pyproject.toml  reference.txt
include/: config.hpp  cuda_utils.hpp  debug.hpp  inference.hpp  kernels.cuh  utils.hpp  weights.hpp
python/: batching_test_tokens.py  decode.py  decode_test.py  reference.py  tokenize.py  tokenizer.py
src/: inference.cpp  kernels.cu  kernels.cuh  main.cpp  main_generated.cpp  weights.cpp
test/: input.txt
